--- a/task3/index.html
+++ b/task3/index.html
@@ -10,6 +10,6 @@
 <script src="script.js"></script>
 <br>
 <br>
-<a href="/index.html">&#8617;Назад </a>
+<a href="../index.html">&#8617;Назад </a>
 </body>
 </html>
