--- a/task1/index.html
+++ b/task1/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <p>Посмотри в консоль, там что-то важное &#9786;</p>
-<a href="/index.html">&#8617;Назад </a>
+<a href="../index.html">&#8617;Назад </a>
 </body>
 <script src="script.js"></script>
 </html>
