--- a/task2/index.html
+++ b/task2/index.html
@@ -24,6 +24,6 @@
 <script src="script.js"></script>
 <br>
 <br>
-<a href="/index.html">&#8617;Назад </a>
+<a href="../index.html">&#8617;Назад </a>
 </body>
 </html>
