--- a/task4/index.html
+++ b/task4/index.html
@@ -10,6 +10,6 @@
 <script src="script.js"></script>
 <br>
 <br>
-<a id="back" href="/index.html">&#8617;Назад </a>
+<a id="back" href="../index.html">&#8617;Назад </a>
 </body>
 </html>
